feat(activity): 添加活动签到管理功能
- 在Activity实体中新增签到相关的字段，包括二维码URL、令牌及过期时间等
- 新增签到QR码生成功能，支持将二维码上传至文件存储服务并返回访问链接
- 实现用户扫码签到逻辑，验证令牌有效性，并更新报名状态为已出席
- 提供手动签到接口，允许管理员为指定成员批量完成签到操作
- 增加导出活动考勤报表的功能，生成Excel格式的出席记录表
- 在前端增加“签到管理”标签页，提供签到二维码展示、手动签到和报表下载界面
- 配置阿里云OSS相关属性以支持文件存储服务
- 更新应用程序主类以启用新的配置属性- 在活动管理页面添加跳转至签到管理的入口按钮
-优化活动详情表格显示，增强用户体验和信息可读性

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,3 +32,13 @@ app:
 
 server:
   port: ${SERVER_PORT:8123}
+
+aliyun:
+  oss:
+    enabled: ${ALIYUN_OSS_ENABLED:false}
+    endpoint: ${ALIYUN_OSS_ENDPOINT:https://oss-cn-hangzhou.aliyuncs.com}
+    region: ${ALIYUN_OSS_REGION:cn-hangzhou}
+    bucket: ${ALIYUN_OSS_BUCKET:campus-club-sample}
+    base-path: ${ALIYUN_OSS_BASE_PATH:}
+    public-domain: ${ALIYUN_OSS_PUBLIC_DOMAIN:}
+    default-url-expiry: ${ALIYUN_OSS_URL_EXPIRY:PT1H}
