feat(video): 实现宣传视频与字幕生成功能
- 新增阿里云语音识别配置与客户端初始化
- 实现宣传视频上传、存储与播放功能
- 支持调用阿里云语音识别自动生成字幕- 提供字幕编辑与保存接口
- 前端集成视频播放器与字幕显示
- 添加视频管理路由与菜单入口
- 数据库新增宣传视频与字幕相关表结构
- 完善后端控制器与服务层逻辑
- 更新文档说明与环境变量配置示例- 增加前端类型定义与API调用逻辑

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,3 +42,17 @@ aliyun:
     base-path: ${ALIYUN_OSS_BASE_PATH:}
     public-domain: ${ALIYUN_OSS_PUBLIC_DOMAIN:}
     default-url-expiry: ${ALIYUN_OSS_URL_EXPIRY:PT1H}
+  speech:
+    enabled: ${ALIYUN_SPEECH_ENABLED:false}
+    region-id: ${ALIYUN_SPEECH_REGION:cn-shanghai}
+    endpoint-name: ${ALIYUN_SPEECH_ENDPOINT_NAME:cn-shanghai}
+    product: ${ALIYUN_SPEECH_PRODUCT:nls-filetrans}
+    domain: ${ALIYUN_SPEECH_DOMAIN:filetrans.cn-shanghai.aliyuncs.com}
+    api-version: ${ALIYUN_SPEECH_API_VERSION:2018-08-17}
+    version: ${ALIYUN_SPEECH_VERSION:4.0}
+    app-key: ${NLS_APP_KEY:}
+    access-key-id: ${ALIYUN_AK_ID:}
+    access-key-secret: ${ALIYUN_AK_SECRET:}
+    enable-words: true
+    poll-interval: ${ALIYUN_SPEECH_POLL:PT3S}
+    max-poll-attempts: ${ALIYUN_SPEECH_ATTEMPTS:40}
